# Zero-To-Haskell

./: .gitignore  ADVANCED_PROJECTS.md  CHECKPOINTS.md  Dockerfile  POST_TUTORIAL_MULTI_LANGUAGE_GUIDE.md  README.md  START_HERE.md  TUTORIAL.md  docker-compose.yml  glossary.md  haskell-complete-tutorial.cabal
app/: Main.hs
chapters/part_00_foundations/chapter_00_what_is_haskell/: README.md  exercises.md  solutions.md
chapters/part_00_haskell/chapter_00_what_is_haskell/: README.md
chapters/part_01_hello_world/chapter_01_hello_world/: README.md  exercises.md  solutions.md
chapters/part_01_hello_world/chapter_02_ghci_types/: README.md  exercises.md  solutions.md
chapters/part_02_chapter/chapter_03_bindings/: README.md
chapters/part_02_chapter/chapter_04_referential_transparency/: README.md  exercises.md
chapters/part_02_chapter/chapter_05_functions/: README.md
chapters/part_02_chapter/chapter_06_higher_order_functions/: README.md
chapters/part_02_chapter/chapter_07_composition/: README.md
chapters/part_02_values_expressions_functions/chapter_03_bindings/: README.md  exercises.md  solutions.md
chapters/part_02_values_expressions_functions/chapter_04_referential_transparency/: README.md  exercises.md  solutions.md
chapters/part_02_values_expressions_functions/chapter_05_functions/: README.md  exercises.md  solutions.md
chapters/part_03_chapter/chapter_08_types/: README.md  exercises.md
projects/capstone/: README.md
scripts/: tutorial-docker
src/Tutorial/: Capstone.hs  Core.hs
test/: Main.hs
tools/: generate_tutorial.py  validate_tutorial.py
(+345 files in other folders)
