cabal-version: 3.8
name: haskell-complete-tutorial
version: 0.1.0.0
build-type: Simple

common warnings
  ghc-options: -Wall
  default-language: GHC2024

library
  import: warnings
  exposed-modules: Tutorial.Core
  hs-source-dirs: src
  build-depends: base >=4.18 && <5

test-suite tutorial-tests
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends: base >=4.18 && <5, haskell-complete-tutorial
